[package]
    name = "{{project-name}}"
    version = "0.1.0"
    edition = "2021"

    # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
    color-eyre = "0.6.2"
    rstest = "0.23.0"
    rayon = "1.8"
    const_panic = "0.2"
    dotenvy = "0.15.7"
    env_logger = "0.11.5"

[lints.rust]
    unsafe_code = "forbid"

[lints.clippy]
    pedantic = { level = "deny", priority = 10 }
    nursery = { level = "deny", priority = 10 }
    enum_glob_use = { level = "deny", priority = 10 }
    unwrap_used = { level = "deny", priority = 10 }

[profile.release]
    debug = true
    opt-level = 'z'   # Optimize for size.
    lto = true        # Enable Link Time Optimization
    codegen-units = 1 # Reduced to increase optimizations.
    panic = 'abort'   # Abort on panic
    strip = "symbols" # Strip symbols from binary
